tests/bad/uint8_-1.radl

# should be rejected because uint8 is positive.

x : uint8 -1
